RESOLVED FIXED162648
Missing Atomics.h include in MarkedBlock.h
https://bugs.webkit.org/show_bug.cgi?id=162648
Summary Missing Atomics.h include in MarkedBlock.h
JF Bastien
Reported 2016-09-27 17:35:04 PDT
Attachments
patch (1.36 KB, patch)
2016-09-27 17:39 PDT, JF Bastien
no flags
JF Bastien
Comment 1 2016-09-27 17:39:09 PDT
Created attachment 290031 [details] patch I think this is the cause of the build failure.
Yusuke Suzuki
Comment 2 2016-09-27 17:40:05 PDT
Comment on attachment 290031 [details] patch r=me
WebKit Commit Bot
Comment 3 2016-09-27 18:13:28 PDT
Comment on attachment 290031 [details] patch Clearing flags on attachment: 290031 Committed r206482: <http://trac.webkit.org/changeset/206482>
WebKit Commit Bot
Comment 4 2016-09-27 18:13:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.